# clean-architecture-buckpal-rust

./: .env  .gitignore  Cargo.toml  README.md  init.sql  init_db.sh  test.db
src/: main.rs
src/account/: mod.rs
src/account/adapter/: account_persistence_adapter.rs  entities.rs  errors.rs  mod.rs  persistence.rs  repositories.rs
src/account/adapter/outgoing/: persistence.rs
src/account/adapter/persistence/: account_persistence_adapter.rs  entities.rs  mod.rs
src/account/adapter/web/: account_controller.rs  mod.rs  send_money_controller.rs
src/account/application/port/: mod.rs
src/account/application/port/in/: SendMoneyCommand.rs
src/account/application/port/incoming/: get_account_balance_query.rs  load_account_query.rs  mod.rs  send_money_command.rs  send_money_use_case.rs
src/account/application/port/outgoing/: load_account_port.rs  mod.rs  update_account_state_port.rs
src/account/application/service/: GetAccountBalanceService.rs  SendMoneyService.rs  get_account_balance_service.rs  mod.rs  send_money_service.rs
src/account/domain/: Account.rs  account_id.rs  activity.rs  activity_window.rs  mod.rs  money.rs
