[package]
name = "buckpal"
version = "0.1.0"
authors = ["James Holman <jameswarringtonholman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
actix-web = "3.3.2"
serde = "1.0.118"
sqlx = {version="0.4.2", features=["sqlite","runtime-actix-native-tls","chrono"]}
async-trait = "0.1.42"
lazy_static = "1.4.0"
dotenv = "0.15.0"
anyhow = "1.0.36"
